--- a/boards/shields/roBa/roBa.dtsi
+++ b/boards/shields/roBa/roBa.dtsi
@@ -1,6 +1,5 @@
 #include <dt-bindings/zmk/matrix_transform.h>
 #include <physical_layouts.dtsi>
-#include <input/processors.dtsi>
 #include <dt-bindings/zmk/input_transform.h>
 
 / {
@@ -64,8 +63,8 @@
 
 
 
-            , <&key_physical_attrs 100 100  650  387 (-2000)   650   387>
-            , <&key_physical_attrs 100 100  763  350 (-1000)     0   350>
+            , <&key_physical_attrs 100 100  650  387 -2000   650   387>
+            , <&key_physical_attrs 100 100  763  350 -1000     0   350>
 
             , <&key_physical_attrs 100 100 1200  337       0     0     0>
 
